--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.1",
         "vue-multiselect": "^3.0.0-alpha.2",
         "vue-select": "^4.0.0-beta.5"
     }
