--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "chart.js": "^4.0.1",
         "html2canvas": "^1.4.1",
         "jspdf": "^2.5.1",
+        "vue-chartjs": "^5.0.1",
         "vue-multiselect": "^3.0.0-alpha.2",
         "vue-select": "^4.0.0-beta.5"
     }
