--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     },
     "dependencies": {
         "chart.js": "^4.0.1",
+        "flatpickr": "^4.6.13",
         "html2canvas": "^1.4.1",
         "jspdf": "^2.5.1",
         "vue-chartjs": "^5.0.1",
         "vue-multiselect": "^3.0.0-alpha.2",
-        "vue-select": "^4.0.0-beta.5"
+        "vue-select": "^4.0.0-beta.5",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
