--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^2.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
